# Lufus

./: README.md  pyproject.toml
src/lufus/drives/: formatting.py
src/lufus/gui/: gui.py
src/lufus/gui/languages/: Français.csv  Português Brasileiro.csv
src/lufus/gui/themes/: default_theme.json  style_template.qss
src/lufus/writing/: detect_windows.py  flash_usb.py  flash_windows.py
src/rufus_py/: __main__.py
src/rufus_py/drives/: autodetect_usb.py  formatting.py  states.py
src/rufus_py/gui/: gui.py
src/rufus_py/writing/: detect_windows.py  flash_usb.py  flash_windows.py  install_ventoy.py
